# supervox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.solo/pipelines/: progress.md
.solo/states/: build  deploy
crates/supervox-agent/: Cargo.toml
crates/supervox-agent/src/: lib.rs  storage.rs  types.rs
crates/supervox-agent/src/tools/: analyze.rs  ask.rs  follow_up.rs  mod.rs  rolling_summary.rs  search.rs  translate.rs
crates/supervox-desktop/: Cargo.toml  Dioxus.toml
crates/supervox-desktop/assets/: Info.plist  style.css
crates/supervox-desktop/src/: app.rs  audio.rs  main.rs
crates/supervox-tui/: Cargo.toml
crates/supervox-tui/src/: agent_loop.rs  analysis_pipeline.rs  app.rs  audio.rs  clipboard.rs  help.rs  intelligence.rs  lib.rs  main.rs
crates/supervox-tui/src/modes/: agent.rs  analysis.rs  history.rs  live.rs  mod.rs
crates/supervox-tui/tests/: cli_commands.rs  import_integration.rs
crates/voxkit/: Cargo.toml
crates/voxkit/src/: lib.rs  mic.rs  mic_mode.rs  openai_stt.rs  parakeet_stt.rs  realtime_stt.rs  silero.rs  stt.rs  system_audio.rs  tts.rs  tts_player.rs  types.rs  vad.rs  whisper_stt.rs
crates/voxkit/tests/: audio_integration.rs
docs/: evolution.md  plan.md  prd.md  research.md
docs/plan-done/action-tracker_20260320/: plan.md
docs/plan-done/action-tracker_20260320/action-tracker_20260320/: spec.md
docs/plan-done/analysis-agent-wire_20260320/: plan.md  spec.md
docs/plan-done/audio-save_20260320/: spec.md
docs/plan-done/call-filter_20260320/: spec.md
docs/plan-done/call-insights_20260320/: spec.md
docs/plan-done/call-management_20260320/: spec.md
docs/plan-done/call-stats_20260320/: plan.md
docs/plan-done/phase1/: plan.md
docs/plan-done/phase2/: spec.md
docs/plan-done/phase3/: plan.md  spec.md
docs/plan-done/phase4/: plan.md  spec.md
docs/plan-done/realtime-live_20260320/: plan.md
docs/plan-done/ux-polish_20260320/: plan.md  spec.md
docs/plan/action-tracker_20260320/: plan.md  spec.md
docs/plan/analysis-agent-wire_20260320/: plan.md
docs/plan/audio-import_20260320/: plan.md  spec.md
docs/plan/audio-save_20260320/: plan.md
docs/plan/call-filter_20260320/: plan.md
docs/plan/call-insights_20260320/: plan.md
docs/plan/call-management_20260320/: plan.md
docs/plan/call-stats_20260320/: plan.md  spec.md
docs/plan/live-bookmarks_20260320/: plan.md  spec.md
docs/plan/live-ux_20260320/: plan.md
docs/plan/phase1/: plan.md  spec.md
docs/plan/phase2/: plan.md
docs/plan/quality-hardening_20260320/: plan.md  spec.md
docs/plan/realtime-live_20260320/: plan.md  spec.md
docs/plan/ux-polish_20260320/: plan.md
docs/plan/whisper-stt_20260320/: plan.md  spec.md
docs/retro/: 2026-03-20-retro.md
schemas/: call-analysis.json  call-insights.json  call-stats.json  call.json  config.json
