[package]
name = "supervox-agent"
version = "0.7.2"
edition = "2024"
description = "SuperVox 3-mode agent: live translate, post-call analysis, agent chat"
license = "MIT"
repository = "https://github.com/fortunto2/supervox"
keywords = ["voice", "agent", "llm", "analysis", "call"]
categories = ["development-tools"]
readme = "../../README.md"
exclude = [".solo/", ".githooks/", "docs/", "CLAUDE.md"]

[dependencies]
sgr-agent = { version = "0.3.0", path = "../../../../shared/rust-code/crates/sgr-agent", features = ["agent", "session", "genai"] }
voxkit = { version = "0.7.2", path = "../voxkit", features = ["openai", "realtime", "mic", "wav"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "macros", "rt"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
schemars = { version = "0.8", features = ["chrono"] }
uuid = { version = "1", features = ["v7"] }
directories = "6"
toml = "0.8"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
